--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
 	"author": "Pranas Varaneckas",
 	"description": "Learning node through free code camp",
 	"keywords": ["learning", "node", "free code camp", "freecodecamp"],
+	"license": "MIT",
 	"dependencies": {
 		"express": "^4.14.0"
 	},
