--- a/package.json
+++ b/package.json
@@ -2,11 +2,17 @@
 	"name": "fcc-learn-npm-package-json",
 	"author": "Pranas Varaneckas",
 	"description": "Learning node through free code camp",
-	"keywords": ["learning", "node", "free code camp", "freecodecamp"],
+	"keywords": [
+		"learning",
+		"node",
+		"free code camp",
+		"freecodecamp"
+	],
 	"version": "1.2.0",
 	"license": "MIT",
 	"dependencies": {
-		"express": "^4.14.0"
+		"express": "^4.14.0",
+		"moment": "2.14.0"
 	},
 	"main": "server.js",
 	"scripts": {
