--- a/package.json
+++ b/package.json
@@ -11,8 +11,7 @@
 	"version": "1.2.0",
 	"license": "MIT",
 	"dependencies": {
-		"express": "^4.14.0",
-		"moment": "^2.10.2"
+		"express": "^4.14.0"
 	},
 	"main": "server.js",
 	"scripts": {
